# Kaggle_Tabular_Unsupervised

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-11-tabular-playground-jul-2022.md
docs/superpowers/specs/: 2026-06-11-tabular-playground-jul-2022-design.md
notebooks/: 01_eda.py  02_preprocess_experiments.py  03_baseline_kmeans.py  04_gmm_bgmm.py  05_density_based.py  06_agglomerative_spectral.py  07_dim_reduction_clustering.py  08_consensus_ensemble.py  09_final_selection.py
runs/01_eda/: result.json
runs/02_preprocess/: result.json
runs/03_kmeans/: labels_best.npy  result.json  scan_table.csv
runs/04_gmm/: labels_bgmm.npy  labels_gmm_best.npy  result.json
runs/05_density/: labels_hdbscan.npy  result.json
runs/06_hier_spectral/: labels_agglomerative.npy  labels_spectral.npy  result.json
runs/07_dim_reduction/: labels_best.npy  result.json
runs/08_consensus/: labels_consensus.npy  result.json
runs/09_final/: master_comparison.csv  result.json
scripts/: download_data.sh
src/clustering/: __init__.py  data.py  dim_reduction.py  evaluate.py  preprocess.py  submission.py  viz.py
src/clustering/models/: __init__.py  consensus.py  density.py  gmm.py  hierarchical.py  kmeans.py
submissions/: RESULTS.md
tests/: test_evaluate.py  test_preprocess.py
