[project]
name = "clustering"
version = "0.1.0"
description = "Unsupervised clustering -- Kaggle TPS Jul 2022"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
    "scikit-learn-extra>=0.3.0",
    "jupytext>=1.16",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.jupytext]
formats = "py:percent"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
